@@ -22,11 +22,11 @@
 	<dependency org="commons-logging" name="commons-logging" rev="1.0.4" />
 	<dependency org="commons-lang" name="commons-lang" rev="2.1" />
 	<dependency org="commons-collections" name="commons-collections" rev="3.1" />
-	<dependency org="org.springframework" name="spring-beans" rev="2.0"/>
-	<dependency org="org.springframework" name="spring-core" rev="2.0"/>
-	<dependency org="org.springframework" name="spring-context" rev="2.0"/>
-	<dependency org="org.springframework" name="spring-dao" rev="2.0"/>
-	<dependency org="org.springframework" name="spring-src" rev="2.0" conf="source->source">
+	<dependency org="org.springframework" name="spring-beans" rev="2.0.1"/>
+	<dependency org="org.springframework" name="spring-core" rev="2.0.1"/>
+	<dependency org="org.springframework" name="spring-context" rev="2.0.1"/>
+	<dependency org="org.springframework" name="spring-dao" rev="2.0.1"/>
+	<dependency org="org.springframework" name="spring-src" rev="2.0.1" conf="source->source">
 		<artifact name="spring-src" type="zip"/>
 	</dependency>
 	<dependency org="com.sun" name="ldapbp" rev="1.0" />
@@ -35,16 +35,16 @@
 	<dependency org="org.acegisecurity" name="acegi-security" rev="1.0.1"
 				conf="buildtime->default" />
     <!-- kind of nasty, acegi needs some 1.2.7 stuff, so we override with newer! -->
-	<dependency org="org.springframework" name="spring-jdbc" rev="2.0"
+	<dependency org="org.springframework" name="spring-jdbc" rev="2.0.1"
 				conf="buildtime->default" />
-	<dependency org="org.springframework" name="spring-remoting" rev="2.0"
+	<dependency org="org.springframework" name="spring-remoting" rev="2.0.1"
 				conf="buildtime->default" />
-	<dependency org="org.springframework" name="spring-support" rev="2.0"
+	<dependency org="org.springframework" name="spring-support" rev="2.0.1"
 				conf="buildtime->default" />
 
 	<!-- test time only dependencies -->
 	<dependency org="com.cenqua.clover" name="clover" rev="1.3.12" conf="test->default" />
-	<dependency org="org.springframework" name="spring-mock" rev="2.0" 
+	<dependency org="org.springframework" name="spring-mock" rev="2.0.1" 
 	            conf="test->default"/>
 	<dependency org="gsbase" name="gsbase" rev="2.0.1" conf="test->default"/>
 	<dependency org="junit" name="junit" rev="3.8.1" conf="test->default"/>
